--- a/css/master.css
+++ b/css/master.css
@@ -15,7 +15,6 @@ body{
 }
 .logo, .user{
     display: block;
-    position: ;
     top: 20px;
 }
 
@@ -38,6 +37,18 @@ body{
   top: 80px;
   right: 0px;
   left: 0px;
+}
+.add_order {
+    display: block;
+    border: 1px black solid;
+    background-color: #00ad70;
+    width: 100px;
+    height: 20px;
+    margin-top: 30px;
+    margin-left: 30px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: white;
 }
 
 .menu, .pole {
