--- a/vrst/Orders/css/master.css
+++ b/vrst/Orders/css/master.css
@@ -142,3 +142,16 @@ body{
     top: 10px;
     font-size: 0.8em;
 }
+
+.add_order {
+    display: block;
+    border: 1px black solid;
+    background-color: #00ad70;
+    width: 100px;
+    height: 20px;
+    margin-top: 30px;
+    margin-left: 30px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: white;
+}
