--- a/css/master.css
+++ b/css/master.css
@@ -1,17 +1,16 @@
 body{
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 
 .header{
   display: block;
-  background: red;
   height: 80px;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   border: 1px solid black;
-    background-color: #00ad70;
+   background-color: #00ad70;
 }
 .logo, .user{
     display: block;
@@ -32,30 +31,17 @@ body{
   display: block;
   background: #e0ece8;
   position: fixed;
-
   bottom: 40px;
   top: 80px;
-  right: 0px;
-  left: 0px;
-}
-.add_order {
-    display: block;
-    border: 1px black solid;
-    background-color: #00ad70;
-    width: 100px;
-    height: 20px;
-    margin-top: 30px;
-    margin-left: 30px;
-    border-radius: 6px;
-    text-decoration: none;
-    color: white;
+  right: 0;
+  left: 0;
 }
 
 .menu, .pole {
   display: block;
   position: fixed;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   border: 1px solid black;
   bottom: 40px;
   top: 80px;
@@ -85,16 +71,44 @@ body{
 .pole{
     margin-left: 250px;
     text-align: center;
-    right: 0px;
-    left: 0px;
+    right: 0;
+    left: 0;
+}
+
+.add_order {
+    display: block;
+    border: 1px black solid;
+    background-color: #00ad70;
+    width: 100px;
+    height: 20px;
+    margin-top: 30px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: white;
+}
+
+.preorder{
+    display: inline-block;
+    width: 700px;
+    margin: 10px 0;
 }
 
 .order{
     border: 1px solid black;
     display: inline-block;
     width: 700px;
-    margin: 10px 0px;
+    margin: 10px 0;
+    text-align: left;
 }
+.order_link {
+    z-index: 1;
+    display: inline-block;
+    position: absolute;
+    width: 700px;
+    height: 120px;
+   
+}
+
 
 .order_body {
     float: left;
@@ -113,7 +127,7 @@ body{
     width: 144px;
     height: 24px;
     text-align: center;
-    margin: 0px auto;
+    margin: 0 auto;
 }
 
 
@@ -143,7 +157,7 @@ body{
   position: fixed;
   background-color: #00ad70;
   height: 40px;
-  bottom: 0px;
+  bottom: 0;
   width: 100%;
   text-align: center;
 }
