--- a/css/master.css
+++ b/css/master.css
@@ -26,6 +26,12 @@ body{
     margin-right: 100px;
     float: right;
     margin-top: 30px;
+    color: white;
+    font-family:sans-serif;
+}
+
+.user a{
+    color: aquamarine;
 }
 .main_body{
   display: block;
@@ -50,8 +56,9 @@ body{
 }
 
 .menu{
-  width: 250px;
-  float: left;
+    padding-top: 20px;
+    width: 250px;
+    float: left;
 }
 
 .munu_item {
@@ -59,13 +66,22 @@ body{
     display: inline-block;
     width: 80%;
     height: 50px;
-    margin: 5px;    
+    margin: 12px 0;
+    text-decoration: none;
+    background-color: #00ad70;
+    border-radius: 3px;
+    
+}
+.munu_item:hover {
+    background-color: #00e092;
 }
 
 .munu_item a {
+    color: white;
     display: block;
     position: relative;
     top: 15px;
+    text-decoration: none;
 }
 
 .pole{
@@ -99,6 +115,8 @@ body{
     width: 700px;
     margin: 10px 0;
     text-align: left;
+    background-color: white;
+    border-radius: 3px;
 }
 .order_link {
     z-index: 1;
@@ -127,30 +145,40 @@ body{
     width: 144px;
     height: 24px;
     text-align: center;
-    margin: 0 auto;
+    margin: 2px auto;
+    background-color: #00ad70;
+    color: white;
+    border-radius: 3px;
+    
 }
 
 
 .order_text {
-    border: 1px solid black;
+    border: 1px solid grey;
     text-align: left;
     display: block;
-    height: 95px;
+    height: 83px;
     overflow: hidden;
+    margin: 0 2px;
+    margin-top: 7px;
+    border-radius: 3px;
 }
 
 .order_status {
-    border: 1px solid black;
+    
     display: block;
     width: 100px;
     margin-left: 600px;
     height: 120px;
+    background-color: #00ad70;
 }
 
 .st {
+    text-align: center;
     position: relative;
     display: block;
     top: 45px;
+    color: white;
 }
 
 .footer {
