--- a/css/vieworder.css
+++ b/css/vieworder.css
@@ -27,6 +27,12 @@ body{
     margin-right: 100px;
     float: right;
     margin-top: 30px;
+    color: white;
+    font-family:sans-serif;
+}
+
+.user a{
+    color: aquamarine;
 }
 .main_body{
     display: block;
@@ -52,6 +58,7 @@ body{
 }
 
 .menu{
+    padding-top: 20px;
     width: 250px;
     float: left;
 }
@@ -61,13 +68,22 @@ body{
     display: inline-block;
     width: 80%;
     height: 50px;
-    margin: 5px;
+    margin: 12px 0;
+    text-decoration: none;
+    background-color: #00ad70;
+    border-radius: 3px;
+
+}
+.munu_item:hover {
+    background-color: #00e092;
 }
 
 .munu_item a {
+    color: white;
     display: block;
     position: relative;
     top: 15px;
+    text-decoration: none;
 }
 
 .pole{
