--- a/vrst/Orders/css/master.css
+++ b/vrst/Orders/css/master.css
@@ -1,17 +1,16 @@
 body{
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 
 .header{
   display: block;
-  background: red;
   height: 80px;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   border: 1px solid black;
-    background-color: #00ad70;
+   background-color: #00ad70;
 }
 .logo, .user{
     display: block;
@@ -27,23 +26,28 @@ body{
     margin-right: 100px;
     float: right;
     margin-top: 30px;
+    color: white;
+    font-family:sans-serif;
+}
+
+.user a{
+    color: aquamarine;
 }
 .main_body{
   display: block;
   background: #e0ece8;
   position: fixed;
-
   bottom: 40px;
   top: 80px;
-  right: 0px;
-  left: 0px;
+  right: 0;
+  left: 0;
 }
 
 .menu, .pole {
   display: block;
   position: fixed;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   border: 1px solid black;
   bottom: 40px;
   top: 80px;
@@ -52,8 +56,9 @@ body{
 }
 
 .menu{
-  width: 250px;
-  float: left;
+    padding-top: 20px;
+    width: 250px;
+    float: left;
 }
 
 .munu_item {
@@ -61,20 +66,29 @@ body{
     display: inline-block;
     width: 80%;
     height: 50px;
-    margin: 5px;    
+    margin: 12px 0;
+    text-decoration: none;
+    background-color: #00ad70;
+    border-radius: 3px;
+    
+}
+.munu_item:hover {
+    background-color: #00e092;
 }
 
 .munu_item a {
+    color: white;
     display: block;
     position: relative;
     top: 15px;
+    text-decoration: none;
 }
 
 .pole{
     margin-left: 250px;
     text-align: center;
-    right: 0px;
-    left: 0px;
+    right: 0;
+    left: 0;
 }
 
 .add_order {
@@ -92,15 +106,17 @@ body{
 .preorder{
     display: inline-block;
     width: 700px;
-    margin: 10px 0px;
+    margin: 10px 0;
 }
 
 .order{
     border: 1px solid black;
     display: inline-block;
     width: 700px;
-    margin: 10px 0px;
+    margin: 10px 0;
     text-align: left;
+    background-color: white;
+    border-radius: 3px;
 }
 .order_link {
     z-index: 1;
@@ -129,36 +145,47 @@ body{
     width: 144px;
     height: 24px;
     text-align: center;
-    margin: 0px auto;
+    margin: 2px auto;
+    background-color: #00ad70;
+    color: white;
+    border-radius: 3px;
+    
 }
 
 
 .order_text {
-    border: 1px solid black;
+    border: 1px solid grey;
     text-align: left;
     display: block;
-    height: 95px;
+    height: 83px;
+    overflow: hidden;
+    margin: 0 2px;
+    margin-top: 7px;
+    border-radius: 3px;
 }
 
 .order_status {
-    border: 1px solid black;
+    
     display: block;
     width: 100px;
     margin-left: 600px;
     height: 120px;
+    background-color: #00ad70;
 }
 
 .st {
+    text-align: center;
     position: relative;
     display: block;
     top: 45px;
+    color: white;
 }
 
 .footer {
   position: fixed;
   background-color: #00ad70;
   height: 40px;
-  bottom: 0px;
+  bottom: 0;
   width: 100%;
   text-align: center;
 }
@@ -169,5 +196,3 @@ body{
     top: 10px;
     font-size: 0.8em;
 }
-
-
