--- a/css/addorder.css
+++ b/css/addorder.css
@@ -1,39 +1,11 @@
+@import "header.css";
+@import "menu.css";
 body{
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 
-.header{
-  display: block;
-  background: red;
-  height: 80px;
-  margin: 0px;
-  padding: 0px;
-  border: 1px solid black;
-    background-color: #00ad70;
-}
-.logo, .user{
-    display: block;
-    top: 20px;
-}
-
-.logo{
-    float: left;
-    margin-left: 200px;
-    margin-top: 15px;
-}
-.user{
-    margin-right: 100px;
-    float: right;
-    margin-top: 30px;
-    color: white;
-    font-family:sans-serif;
-}
-
-.user a{
-    color: aquamarine;
-}
 .main_body{
   display: block;
   background: #e0ece8;
@@ -41,15 +13,15 @@ body{
 
   bottom: 40px;
   top: 80px;
-  right: 0px;
-  left: 0px;
+  right: 0;
+  left: 0;
 }
 
 .menu, .pole {
   display: block;
   position: fixed;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   border: 1px solid black;
   bottom: 40px;
   top: 80px;
@@ -57,47 +29,18 @@ body{
     overflow: auto;
 }
 
-.menu{
-    padding-top: 20px;
-    width: 250px;
-    float: left;
-}
-
-.munu_item {
-    border: 1px solid black;
-    display: inline-block;
-    width: 80%;
-    height: 50px;
-    margin: 12px 0;
-    text-decoration: none;
-    background-color: #00ad70;
-    border-radius: 3px;
-
-}
-.munu_item:hover {
-    background-color: #00e092;
-}
-
-.munu_item a {
-    color: white;
-    display: block;
-    position: relative;
-    top: 15px;
-    text-decoration: none;
-}
-
 .pole{
     margin-left: 250px;
     text-align: center;
-    right: 0px;
-    left: 0px;
+    right: 0;
+    left: 0;
 }
 
 .order{
     border: 1px solid black;
     display: inline-block;
     width: 700px;
-    margin: 10px 0px;
+    margin: 10px 0;
     min-height: 300px;
     text-align: left;
     padding-left: 20px;
@@ -109,7 +52,7 @@ body{
   position: fixed;
   background-color: #00ad70;
   height: 40px;
-  bottom: 0px;
+  bottom: 0;
   width: 100%;
   text-align: center;
 }
