--- a/css/master.css
+++ b/css/master.css
@@ -1,38 +1,11 @@
+@import "header.css";
+@import "menu.css";
 body{
   margin: 0;
   padding: 0;
   text-align: center;
 }
 
-.header{
-  display: block;
-  height: 80px;
-  margin: 0;
-  padding: 0;
-  border: 1px solid black;
-   background-color: #00ad70;
-}
-.logo, .user{
-    display: block;
-    top: 20px;
-}
-
-.logo{
-    float: left;
-    margin-left: 200px;
-    margin-top: 15px;
-}
-.user{
-    margin-right: 100px;
-    float: right;
-    margin-top: 30px;
-    color: white;
-    font-family:sans-serif;
-}
-
-.user a{
-    color: aquamarine;
-}
 .main_body{
   display: block;
   background: #e0ece8;
@@ -55,34 +28,6 @@ body{
     overflow: auto;
 }
 
-.menu{
-    padding-top: 20px;
-    width: 250px;
-    float: left;
-}
-
-.munu_item {
-    border: 1px solid black;
-    display: inline-block;
-    width: 80%;
-    height: 50px;
-    margin: 12px 0;
-    text-decoration: none;
-    background-color: #00ad70;
-    border-radius: 3px;
-    
-}
-.munu_item:hover {
-    background-color: #00e092;
-}
-
-.munu_item a {
-    color: white;
-    display: block;
-    position: relative;
-    top: 15px;
-    text-decoration: none;
-}
 
 .pole{
     margin-left: 250px;
@@ -131,7 +76,7 @@ body{
 .order_body {
     float: left;
     width: 600px;
-    height: 120px;
+    height: 130px;
 }
 
 .order_menu{
@@ -157,10 +102,9 @@ body{
     border: 1px solid grey;
     text-align: left;
     display: block;
-    height: 83px;
+    height: 93px;
     overflow: hidden;
-    margin: 0 2px;
-    margin-top: 7px;
+    margin: 7px 2px 0;
     border-radius: 3px;
 }
 
@@ -169,7 +113,7 @@ body{
     display: block;
     width: 100px;
     margin-left: 600px;
-    height: 120px;
+    height: 130px;
     background-color: #00ad70;
 }
 
